syntax = "proto3";

package keykammer;
option go_package = "keykammer/proto";

service KeykammerService {
  rpc SendMessage(ChatMessage) returns (ChatResponse);
  rpc JoinRoom(JoinRequest) returns (JoinResponse);
}

message ChatMessage {
  string room_id = 1;
  string content = 2;
}

message ChatResponse {
  bool success = 1;
}

message JoinRequest {
  string room_id = 1;
  int64 version = 2;  // Protocol version
}

message JoinResponse {
  bool success = 1;
  string message = 2;
  int32 client_count = 3;
}